--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'company_index' %}">Account</a>
+                        <a class="nav-link" href="{% url 'company_account' %}">Account</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
