--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,6 +30,10 @@ body {
     background-color: #F9FAFC;
 }
 
+.content {
+    margin: 1.6rem 10% 3.2rem;
+}
+
 input {
     width: 100%;
     padding: .3rem 1rem;
@@ -44,8 +48,4 @@ input[type="checkbox"] {
 
 .btn {
     width: 100%;
-}
-
-footer {
-    margin-top: 1.2rem;
 }
