Add content class to main tag

--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
         </div>
     </nav>
 
-    <main class="flex-shrink-0 main-bg">
+    <main class="flex-shrink-0 main-bg content">
         {% block content %}
         <!-- Body Content -->
         {% endblock content %}
