Add selectors for consistent form buttons

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,6 +46,8 @@ input[type="checkbox"] {
     width: auto;
 }
 
-.btn {
+.company_form > .btn,
+.signin > .btn,
+.signup > .btn {
     width: 100%;
 }
