--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -17,12 +17,12 @@
 
   <div class="row">
     <div class="col-md-8 mt-3 offset-md-2">
-      <form method="post" action="{% url 'account_logout' %}">
+      <form class="company_form" method="post" action="{% url 'account_logout' %}">
         {% csrf_token %}
         {% if redirect_field_value %}
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
         {% endif %}
-        <button class="btn btn-primary btn-block" type="submit">{% trans 'Sign Out' %}</button>
+        <button class="btn btn-primary" type="submit">{% trans 'Sign Out' %}</button>
       </form>
     </div>
   </div>
