--- a/company/templates/company/edit_company.html
+++ b/company/templates/company/edit_company.html
@@ -15,10 +15,10 @@
             {% if user.is_authenticated %}
 
             <h5>Edit your company details below:</h5>
-            <form class="company_form" method="post" style="margin-top: 1.2em";>
+            <form class="company_form" enctype="multipart/form-data" method="post" style="margin-top: 1.2em";>
+                {% csrf_token %}
                 {{ company_form | crispy }}
                 {{ address_form | crispy }}
-                {% csrf_token %}
                 <button type="submit" class="btn btn-primary btn-lg btn-block">Submit</button>
             </form>
 
