--- a/company/templates/company/edit_company.html
+++ b/company/templates/company/edit_company.html
@@ -10,12 +10,15 @@
       <!-- Edit Company Form -->
       <div class="col-12 mt-3 left">
           <div class="row">
-            <h2>Edit {{ company }}</h2>
+            <h2>Edit {{ data.company_name }}</h2>
 
             {% if user.is_authenticated %}
 
             <h5>Edit your company details below:</h5>
-            <form class="company_form" enctype="multipart/form-data" method="post" style="margin-top: 1.2em";>
+
+            <p>Current Image: {{ data.current_brand_image }}</p>
+            <img src="https://res.cloudinary.com/daxqnc8yw/{{ dbm.brand_image }}" alt="{{ data.company_name }} brand image">
+            <form class="company_form" method="post" enctype="multipart/form-data" style="margin-top: 1.2em";>
                 {% csrf_token %}
                 {{ company_form | crispy }}
                 {{ address_form | crispy }}
