--- a/company/templates/company/exists.html
+++ b/company/templates/company/exists.html
@@ -5,7 +5,7 @@
 <div class="container-fluid">
   <div class="row">
 
-      <!-- Company Account -->
+      <!-- Company Exists -->
       <div class="col-12 mt-3 left">
           <div class="row">
 
@@ -26,4 +26,4 @@
 
 </div>
 
-{%endblock%}
+{% endblock content %}
