--- a/company/templates/company/inactive_company.html
+++ b/company/templates/company/inactive_company.html
@@ -7,7 +7,7 @@
 <div class="container-fluid">
   <div class="row">
 
-      <!-- Company Pending -->
+      <!-- Company Disapproved -->
       <div class="col-12 mt-3 left">
           <div class="row">
 
@@ -29,4 +29,4 @@
 
 </div>
 
-{%endblock%}
+{% endblock content %}
