--- a/company/templates/company/edit_company_not_valid.html
+++ b/company/templates/company/edit_company_not_valid.html
@@ -5,7 +5,7 @@
 <div class="container-fluid">
   <div class="row">
 
-      <!-- Company Account -->
+      <!-- Company Form Not Valid -->
       <div class="col-12 mt-3 left">
           <div class="row">
 
@@ -24,4 +24,4 @@
 
 </div>
 
-{%endblock%}
+{% endblock content %}
