Add favicon with preconnect to host

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <link rel="preconnect" href="https://raw.githubusercontent.com/">
   <link rel="preconnect" href="https://cdnjs.cloudflare.com/">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://cdn.jsdelivr.net">
+
+  <link rel="icon" type="image/x-icon"
+        href="https://raw.githubusercontent.com/MTraveller/bookable/main/media/favicon.ico">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
