Fix variable names

--- a/company/templates/company/pending_company.html
+++ b/company/templates/company/pending_company.html
@@ -12,8 +12,8 @@
           <div class="row">
 
             {% if user.is_authenticated %}
-            <h1>{{ company }}</h1>
-            <h6>Status: {{ status }}</h6>
+            <h1>{{ company_name }}</h1>
+            <h6>Status: {{ company_status }}</h6>
 
             <h6>
               Company is currently awaiting activation by site admin,
