--- a/templates/base.html
+++ b/templates/base.html
@@ -4,24 +4,52 @@
 <html class="h-100">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <!--Preconnect-->
   <link rel="preconnect" href="https://raw.githubusercontent.com/">
   <link rel="preconnect" href="https://cdnjs.cloudflare.com/">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://cdn.jsdelivr.net">
 
+  <!--Load favicon-->
   <link rel="icon" type="image/x-icon"
         href="https://raw.githubusercontent.com/MTraveller/bookable/main/media/favicon.ico">
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!--Load fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
+
+  <!--Primary Meta Tags-->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="title" content="Bookable - Booking Made Simple">
+  <meta name="description" content="Bookable is a django app for companies looking to accept bookings online">
+  <meta name="author" content="MT - MTraveller, https://github.com/MTraveller/bookable">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://mt-bookable.herokuapp.com/">
+  <meta property="og:title" content="Bookable - Booking Made Simple">
+  <meta property="og:description" content="Bookable is a django app for companies looking to accept bookings online">
+  <meta property="og:image"
+      content="#">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://mt-bookable.herokuapp.com/">
+  <meta property="twitter:title" content="Bookable - Booking Made Simple">
+  <meta property="twitter:description" content="Bookable is a django app for companies looking to accept bookings online">
+  <meta property="twitter:image"
+      content="#">
+
+  <!--default scripts-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/brands.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha256-7ZWbZUAi97rkirk4DcEp4GWDPkWpRMcNaEyXGsNXjLg=" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha256-DOneOY3n5+xj6Da3AJBkPHxaPynqSlGaZ9790gbBOsE=" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+  <!--Load Cloudinary & JS/GoogleMaps lookup-->
   {% if request.path == "/company/add/" or request.path == "/company/edit/" %}
     {% include 'company/cloudinary.html' %}
   {% endif %}
