--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,19 +7,13 @@
 {% block content %}
 
 <div class="container">
-  <div class="row">
-    <div class="col-md-8 mt-3 offset-md-2">
+  <div class="row justify-content-center">
+    <div class="col-md-6 mt-3">
 
     <h3>{% trans "Sign In" %}</h3>
 
     <p>{% blocktrans %}If you have not created an account yet, then please
     <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
-
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-8 mt-3 offset-md-2">
 
       <form class="login" method="POST" action="{% url 'account_login' %}">
         {% csrf_token %}
