--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -7,16 +7,12 @@
 {% block content %}
 
 <div class="container">
-  <div class="row">
-    <div class="col-md-8 mt-3 offset-md-2">
+  <div class="row justify-content-center">
+    <div class="col-md-6 mt-3">
       <h3>{% trans "Sign Out" %}</h3>
 
       <p>{% trans 'Are you sure you want to sign out?' %}</p>
-    </div>
-  </div>
 
-  <div class="row">
-    <div class="col-md-8 mt-3 offset-md-2">
       <form class="company_form" method="post" action="{% url 'account_logout' %}">
         {% csrf_token %}
         {% if redirect_field_value %}
