--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -7,18 +7,13 @@
 {% block content %}
 
 <div class="container">
-  <div class="row">
-    <div class="col-md-8 mt-3 offset-md-2">
+  <div class="row justify-content-center">
+    <div class="col-md-6 mt-3">
 
       <h3>{% trans "Sign Up" %}</h3>
 
       <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-8 mt-3 offset-md-2">
       <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
         {% csrf_token %}
         {{ form.as_p }}
