--- a/booking/templates/booking/book_company.html
+++ b/booking/templates/booking/book_company.html
@@ -8,7 +8,12 @@
     <div class="col-md order-md-2">
       <div class="d-grid gap-2 mb-3 d-md-flex justify-content-md-between align-items-end">
         <h2>{{ context.company_name }}</h2>
-        <figure>{{ context.company_brand_image|safe }}</figure>
+        {% if context.company_brand_image|safe == 'placeholder' %}
+          <!--Public domain image - source: https://commons.wikimedia.org/wiki/File:David_Octavius_Hill_(1802-1870)_-_On_the_Quay_at_Leith_-_NG_210_-_National_Galleries_of_Scotland.jpg-->
+          <figure><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/David_Octavius_Hill_%281802-1870%29_-_On_the_Quay_at_Leith_-_NG_210_-_National_Galleries_of_Scotland.jpg/287px-David_Octavius_Hill_%281802-1870%29_-_On_the_Quay_at_Leith_-_NG_210_-_National_Galleries_of_Scotland.jpg" width="96"  style="border-radius: .3rem;filter: drop-shadow(0 0 5px #05284D);" alt="David Octavius Hill (1802-1870) - On the Quay at Leith"></figure>
+        {% else %}
+          <figure>{{ context.company_brand_image|safe }}</figure>
+        {% endif %}
       </div>
       <h6>About</h6>
       <p>{{ context.company_description }}</p>
@@ -16,7 +21,7 @@
         <div class="bd-highlight">
           <p class="street">{{ context.company_street }}</p>
           <span>{{ context.company_city }}, </span><span>{{ context.company_state }}</span><br>
-          <a href="{{ context.company_name_url }}" target="blank">Get directions</a>
+          <a href="{{ context.company_directions }}" target="blank">Get directions</a>
           <br>
           <br>
           <a href="tel:{{ context.company_phone }}">{{ context.company_entered_phone }}</a>
