--- a/company/templates/company/account.html
+++ b/company/templates/company/account.html
@@ -3,76 +3,43 @@
 {% load cloudinary %}
 {% block content %}
 
-<div class="container-fluid">
-  <div class="row justify-content-center">
 
-      <!-- Company Account -->
-      <div class="col-8 mt-3 left">
-        <div class="row">
-            {% if user.is_authenticated %}
+    <!-- Company Account -->
+    {% if user.is_authenticated %}
 
-            <div class="row justify-content-center">
-              <div class="col">
-                Good day {{ context.user_first_name }}
-              </div>
-              <div class="col">
-                <button class="btn btn-primary btn-block btn-offcanvas" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasAccountInfo" aria-controls="offcanvasAccountInfo">
-                  View Account Info
-                </button>
-              </div>
-            </div>
-
-            {% include 'company/bookings_list.html' %}
-
-            <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasAccountInfo" aria-labelledby="offcanvasAccountInfoLabel">
-              <div class="offcanvas-header">
-                {{ context.brand_image|safe }}
-                <h5 class="offcanvas-title" id="offcanvasAccountInfoLabel">{{ context.company_name }}</h5>
-                <span>Status: {{ context.company_status }}</span>
-                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-              </div>
-              <div class="offcanvas-body">
-                <div>
-                  <p>Company URL: <a href="/booking/">view page</a></p>
-                  <p>Current brand image file: {{ context.previous_brand_image }}</p>
-                  <p>Company address:</p>
-                  <p>{{ context.company_address }}</p>
-                  <p>Company phone: {{ context.company_phone }}</p>
-                  <p>Available spots/seats: {{ context.company_spots }}</p>
-                  <h6>About:</h6>
-                  <p>{{ context.company_description }}</p>
-                  <p></p>
-                  <span>Website:</span>
-                  <p>{{ context.company_website }}</p>
-                  <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                    <p>Name: </p>
-                    <p>{{ context.user_first_name }}</p>
-                    <p>{{ context.user_last_name }}</p>
-                  </div>
-                  {% if context.company_category %}
-                  <p>Category: {{ context.company_category }}</p>
-                  {% endif %}
-                  <p>Registered on:</p>
-                  <p>{{ context.company_registered_on }}</p>
-                  <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                    <p>Username: {{ context.user }}</p>
-                    <p>User id: {{ context.company_user_id }}</p>
-                    <p>Company id: {{ context.company_id }}</p>
-                  </div>
-                  <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                    <a class="btn btn-secondary" href="{% url 'company_edit' %}">Edit Company Info</a>
-                    <a class="btn btn-danger" href="{% url 'company_delete' %}">Delete Account</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            {% endif %}
-
+    <div class="row justify-content-center">
+      <div class="col-md-10">
+        <div class="d-flex flex-row sticky-top gap-3 mb-4 justify-content-between align-items-center bg-primary bg-gradient rounded-1">
+          <div class="p-2">
+            <h6 class="text-light px-sm-5">Good day {{ context.user_first_name }}</h6>
           </div>
-      </div>
-  </div>
+          <div class="p-2">
+            <a class="btn btn-link mb-0 btn-offcanvas text-end text-light px-sm-5" role="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasAccountInfo" aria-controls="offcanvasAccountInfo">
+              Account Info
+            </a>
+          </div>
+        </div>
 
-</div>
+        {% include 'company/bookings_list.html' %}
+
+        <div class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcanvasAccountInfo" aria-labelledby="offcanvasAccountInfoLabel">
+          <div class="offcanvas-header">
+            {% if context.brand_image|safe == 'placeholder' %}
+              <figure><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/David_Octavius_Hill_%281802-1870%29_-_On_the_Quay_at_Leith_-_NG_210_-_National_Galleries_of_Scotland.jpg/287px-David_Octavius_Hill_%281802-1870%29_-_On_the_Quay_at_Leith_-_NG_210_-_National_Galleries_of_Scotland.jpg" width="48"  style="border-radius: .3rem;filter: drop-shadow(0 0 5px #05284D);" alt="David Octavius Hill (1802-1870) - On the Quay at Leith"></figure>
+            {% else %}
+              <figure>{{ context.brand_image|safe }}</figure>
+            {% endif %}
+            <h5 class="offcanvas-title" id="offcanvasAccountInfoLabel">{{ context.company_name }}</h5>
+            <span>Status: {{ context.company_status }}</span>
+            <button type="button" class="btn-close btn-close-white text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+            {% include 'company/offcanvas_company_info.html' %}
+          </div>
+        </div>
+      </div>
+    </div>
+
+    {% endif %}
 
 {% endblock content %}
