--- a/company/templates/company/pending_company.html
+++ b/company/templates/company/pending_company.html
@@ -4,29 +4,30 @@
 
 {% load crispy_forms_tags %}
 
-<div class="container-fluid">
-  <div class="row">
-
+  <div class="container-fluid company">
+    <div class="row">
       <!-- Company Pending -->
+
       <div class="col-12 mt-3 left">
-          <div class="row">
+        <div class="row">
 
-            {% if user.is_authenticated %}
-            <h1>{{ company_name }}</h1>
-            <h6>Status: {{ company_status }}</h6>
+          {% if user.is_authenticated %}
 
-            <h6>
-              Company is currently awaiting activation by site admin,
-              once activated an email will be sent to you.
-            </h6>
-            <p>Delete account <a href="{% url 'company_delete' %}">here</a></p>
+          <h1>{{ company_name }}</h1>
+          <h6>Status: {{ company_status }}</h6>
 
-            {% endif %}
+          <h6>
+            Company is currently awaiting activation by site admin,
+            once activated an email will be sent to you.
+          </h6>
+          <p>Delete account <a href="{% url 'company_delete' %}">here</a></p>
 
-          </div>
+          {% endif %}
+
+        </div>
       </div>
-  </div>
 
-</div>
+    </div>
+  </div>
 
 {% endblock content %}
