--- a/templates/base.html
+++ b/templates/base.html
@@ -42,85 +42,110 @@
   <meta property="twitter:image"
       content="#">
 
-  <!--default scripts-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!--Load CSS-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/brands.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha256-7ZWbZUAi97rkirk4DcEp4GWDPkWpRMcNaEyXGsNXjLg=" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha256-DOneOY3n5+xj6Da3AJBkPHxaPynqSlGaZ9790gbBOsE=" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-  <!--Load Cloudinary & JS/GoogleMaps lookup-->
-  {% if request.path == "/company/add/" or request.path == "/company/edit/" %}
-    {% include 'company/cloudinary.html' %}
+  {% if request.path == context.booking_path %}
+  <link rel="stylesheet" href="{% static 'js/jquery.datetimepicker.min.css' %}">
   {% endif %}
+
+
   <title>Bookable</title>
 </head>
 
 <body class="d-flex flex-column h-100 main-bg">
 
-    <!-- Navigation -->
+  <!-- Navigation -->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
-        <div class="container-fluid">
-            {% if request.user.is_authenticated %}
-                <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">Booka<span
-                            class="thin">ble</span></span></a>
-            {% else %}
-                <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">Booka<span
-                    class="thin">ble</span></span></a>
-            {% endif %}
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
-                    </li>
-                    {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'company_account' %}">Account</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
-                    </li>
-                    {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'account_login' %}">Login</a>
-                    </li>
-                    {% endif %}
-                </ul>
-                {% if user.is_authenticated %}
-                <span class="navbar-text signed-in">
-                    Signed in as:
-                    {% if user %}
-                        {{ user.first_name }}
-                    {% else %}
-                        {{ context.user.first_name }}
-                    {% endif %}
-                </span>
-                {% endif %}
-            </div>
-        </div>
-    </nav>
+  <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <div class="container-xl">
+      {% if request.user.is_authenticated %}
+        <a class="navbar-brand" href="{% url 'home' %}">
+          <span class="brand">Booka<span class="thin">ble</span></span>
+        </a>
+      {% else %}
+        <a class="navbar-brand" href="{% url 'home' %}">
+          <span class="brand">Booka<span class="thin">ble</span></span>
+        </a>
+      {% endif %}
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+          </li>
+          {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'company_account' %}">Account</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+            </li>
+          {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+            </li>
+          {% endif %}
+        </ul>
+        {% if user.is_authenticated %}
+          <span class="navbar-text signed-in">
+            <span>Signed in as:
+          {% if user %}
+            {{ user.first_name }}
+          {% else %}
+            {{ context.user.first_name }}
+          {% endif %}
+          </span>
+        {% endif %}
+      </div>
+    </div>
+  </nav>
 
-    <main class="flex-shrink-0 main-bg content">
-        {% block content %}
-        <!-- Body Content -->
-        {% endblock content %}
-    </main>
+  <main class="container-sm mt-5 mb-5 main-bg">
 
-    <!-- Footer -->
-    <footer class="footer mt-auto py-3 dark-bg">
-        <p class="m-0 text-center text-white">Made by @MTraveller</p>
-        <p class="m-0 text-center text-white">Find me at:
-            <a href="https://github.com/MTraveller"><i class="fa-brands fa-square-github ms-3"></i></a>
-            <a href="https://www.linkedin.com/in/mtantouri/"><i class="fa-brands fa-linkedin ms-3"></i></a>
-    </footer>
+    {% block content %}
+    <!-- Body Content -->
+    {% endblock content %}
+  </main>
+
+  <!-- Footer -->
+  <footer class="footer mt-auto py-3 dark-bg">
+    <p class="m-0 text-center text-white">Made by @MTraveller</p>
+    <p class="m-0 text-center text-white">Find me at:
+        <a href="https://github.com/MTraveller"><i class="fa-brands fa-square-github ms-3"></i></a>
+        <a href="https://www.linkedin.com/in/mtantouri/"><i class="fa-brands fa-linkedin ms-3"></i></a>
+    </p>
+
+    <!--Load Scripts-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha256-DOneOY3n5+xj6Da3AJBkPHxaPynqSlGaZ9790gbBOsE=" crossorigin="anonymous"></script>
+
+    {% if request.path == "/company/add/" or request.path == "/company/edit/" %}
+    <!--Load Cloudinary & JS/GoogleMaps-->
+    {% include 'company/cloudinary.html' %}
+    {{ google_api_key|json_script:'google_api_key' }}
+    <script type="text/javascript" src="{% static 'js/google_places.js' %}"></script>
+    {% endif %}
+
+    {% if request.path == context.booking_path %}
+    <!--Load DateTimePicker & JS/GoogleMaps-->
+    <script type="text/javascript" src="{% static 'js/jquery.datetimepicker.full.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/datetimepicker.js' %}"></script>
+    {{ context.google_api_key|json_script:'google_api_key' }}
+    {{ context.company_name|json_script:'company_name' }}
+    {{ context.latitude|json_script:'latitude' }}
+    {{ context.longitude|json_script:'longitude' }}
+    <script type="text/javascript" src="{% static 'js/google_map.js' %}"></script>
+    {% endif %}
+
+  </footer>
 </body>
 
 </html>
