Refactor book now link

--- a/booking/templates/booking/book_deleted.html
+++ b/booking/templates/booking/book_deleted.html
@@ -12,7 +12,7 @@
 
           <h2 class="px-0">Booking Deleted</h2>
           <h6 class="mb-3 px-0">Make a new booking?</h6>
-          <a class="btn btn-outline-primary btn-sm" href="/booking/{{ obj.slug }}/">Book Now</a>
+          <a class="btn btn-outline-primary btn-sm" href="/booking/{{ kwargs.slug }}/">Book Now</a>
 
         </div>
       </div>
