Rename page explanation comment

--- a/booking/templates/booking/book_does_not_exist.html
+++ b/booking/templates/booking/book_does_not_exist.html
@@ -5,7 +5,7 @@
 
   <div class="container-fluid booking">
     <div class="row justify-content-center">
-      <!-- Booking Customer Delete Confirmation -->
+      <!-- Booking Does Not Exist -->
 
       <div class="col-md-6 mt-3">
         <div class="row">
