--- a/booking/templates/booking/book_thankyou.html
+++ b/booking/templates/booking/book_thankyou.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-{% load crispy_forms_tags %}
 
 {% block content %}
 
@@ -50,7 +49,7 @@
           <div class="row mb-md-5 align-items-center">
             <div class="col-sm-6 mb-3 mb-md-0">
               <p class="mb-0 fs-5 fw-semibold">Share:</p>
-              <a class="mt-1 text-dark fs-3 fw-bold" href="{{ request.session.directions }}" target="blank">Directions</a>
+              <a class="mt-1 text-dark fs-3 fw-bold" href="{{ direction }}" target="_blank">Directions</a>
             </div>
             <div class="col-sm-6">
               <a class="btn btn-warning" href="{{ request.build_absolute_uri }}delete/">Delete Booking</a>
