--- a/booking/templates/booking/book_delete.html
+++ b/booking/templates/booking/book_delete.html
@@ -5,7 +5,7 @@
 
   <div class="container-fluid booking">
     <div class="row justify-content-center">
-      <!-- Company Delete -->
+      <!-- Booking Customer Delete -->
 
       <div class="col-md-6 mt-3">
         <div class="row">
