--- a/booking/templates/booking/book_already_booked.html
+++ b/booking/templates/booking/book_already_booked.html
@@ -4,7 +4,7 @@
 
   <div class="container-fluid booking">
     <div class="row justify-content-center">
-      <!-- Booking Customer Spots Filled -->
+      <!-- Booking Customer Already Booked -->
 
       <div class="col-md-6 mt-3">
         <div class="row">
