Add _blank to company website URL

--- a/booking/templates/booking/book_company.html
+++ b/booking/templates/booking/book_company.html
@@ -27,7 +27,7 @@
             <a href="tel:{{ context.company_phone }}">{{ context.company_entered_phone }}</a>
             <br>
             <br>
-            <a href="{{ context.company_website }}">{{ context.company_website }}</a>
+            <a href="{{ context.company_website }}" target="_blank">{{ context.company_website }}</a>
           </div>
           <div class="bd-highlight">
             <div id="map"></div>
