--- a/booking/templates/booking/book_does_not_exist.html
+++ b/booking/templates/booking/book_does_not_exist.html
@@ -6,12 +6,14 @@
     <div class="row justify-content-center">
       <!-- Booking Does Not Exist -->
 
-      <div class="col-md-6 mt-3">
+      <div class="col-md-8 mt-3">
         <div class="row">
 
           <h2 class="px-0">Item Does Not Exist</h2>
-          <h6 class="mb-3 px-0">Make a new booking?</h6>
-          <a class="btn btn-outline-primary btn-sm" href="/booking/{{ obj.slug }}/">Book Now</a>
+          <div class="col-4 d-grid gap-3 px-0">
+            <h6 class="mb-3 px-0">Make a new booking?</h6>
+            <a class="btn btn-outline-primary" href="/booking/{{ obj.slug }}/">Book Now</a>
+          </div>
 
         </div>
       </div>
