--- a/company/templates/company/bookings_list.html
+++ b/company/templates/company/bookings_list.html
@@ -1,7 +1,55 @@
-{% extends "base.html" %}
-
 {% block content %}
 
-<h1>Booking List</h1>
+{% load crispy_forms_tags %}
 
-{%endblock%}
+  <h2 class="mb-3">Booking List</h2>
+
+  <table class="table">
+    <thead class="table-primary">
+      <tr>
+        <th scope="col">Id</th>
+        <th scope="col">Date</th>
+        <th scope="col">Spots</th>
+        <th scope="col">Customer</th>
+        <th scope="col">Status</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for booking in page_bookings %}
+      <tr>
+        <th class="table-primary" scope="row">{{ booking.id }}</th>
+        {% if not forloop.counter|divisibleby:2 %}
+        <td class="table-light">{{ booking.date_time }}</td>
+        <td class="table-light">{{ booking.spots }}</td>
+        <td class="table-light">{{ booking.customer }}</td>
+        <td class="table-light">{{ booking_status | crispy }}</td>
+        {% elif forloop.counter|divisibleby:2 %}
+        <td class="table-secondary">{{ booking.date_time }}</td>
+        <td class="table-secondary">{{ booking.spots }}</td>
+        <td class="table-secondary">{{ booking.customer }}</td>
+        <td class="table-secondary">{{ booking_status | crispy }}</td>
+        {% endif %}
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+
+  <div class="pagination">
+    <span class="step-links">
+      {% if page_bookings.has_previous %}
+        <a href="?page=1">&laquo; first</a>
+        <a href="?page={{ page_bookings.previous_page_number }}">previous</a>
+      {% endif %}
+
+      <span class="current">
+        Page {{ page_bookings.number }} of {{ page_bookings.paginator.num_pages }}.
+      </span>
+
+      {% if page_bookings.has_next %}
+        <a href="?page={{ page_bookings.next_page_number }}">next</a>
+        <a href="?page={{ page_bookings.paginator.num_pages }}">last &raquo;</a>
+      {% endif %}
+    </span>
+  </div>
+
+{% endblock content %}
