--- a/company/templates/company/account.html
+++ b/company/templates/company/account.html
@@ -11,7 +11,7 @@
       <div class="col-md-10">
         <div class="d-flex flex-row sticky-top gap-3 mb-4 justify-content-between align-items-center bg-primary bg-gradient rounded-1">
           <div class="p-2">
-            <h6 class="text-light px-sm-5">Good day {{ context.user_first_name }}</h6>
+            <h6 class="text-light px-sm-5">Good day {{ user_first_name }}</h6>
           </div>
           <div class="p-2">
             <a class="btn btn-link mb-0 btn-offcanvas text-end text-light px-sm-5" role="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasAccountInfo" aria-controls="offcanvasAccountInfo">
@@ -24,13 +24,13 @@
 
         <div class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcanvasAccountInfo" aria-labelledby="offcanvasAccountInfoLabel">
           <div class="offcanvas-header">
-            {% if context.brand_image|safe == 'placeholder' %}
+            {% if brand_image|safe == 'placeholder' %}
               <figure><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/David_Octavius_Hill_%281802-1870%29_-_On_the_Quay_at_Leith_-_NG_210_-_National_Galleries_of_Scotland.jpg/287px-David_Octavius_Hill_%281802-1870%29_-_On_the_Quay_at_Leith_-_NG_210_-_National_Galleries_of_Scotland.jpg" width="48"  style="border-radius: .3rem;filter: drop-shadow(0 0 5px #05284D);" alt="David Octavius Hill (1802-1870) - On the Quay at Leith"></figure>
             {% else %}
-              <figure>{{ context.brand_image|safe }}</figure>
+              <figure>{{ brand_image|safe }}</figure>
             {% endif %}
-            <h5 class="offcanvas-title" id="offcanvasAccountInfoLabel">{{ context.company_name }}</h5>
-            <span>Status: {{ context.company_status }}</span>
+            <h5 class="offcanvas-title" id="offcanvasAccountInfoLabel">{{ company_name }}</h5>
+            <span>Status: {{ company_status }}</span>
             <button type="button" class="btn-close btn-close-white text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
