--- a/booking/templates/booking/book_company.html
+++ b/booking/templates/booking/book_company.html
@@ -21,7 +21,7 @@
           <div class="bd-highlight">
             <p class="street">{{ context.company_street }}</p>
             <span>{{ context.company_city }}, </span><span>{{ context.company_state }}</span><br>
-            <a href="{{ context.company_direction }}" target="blank">Get directions</a>
+            <a href="{{ context.company_direction }}" target="_blank">Get directions</a>
             <br>
             <br>
             <a href="tel:{{ context.company_phone }}">{{ context.company_entered_phone }}</a>
