Add white color to URL & fix target _blank

--- a/company/templates/company/offcanvas_company_info.html
+++ b/company/templates/company/offcanvas_company_info.html
@@ -1,7 +1,7 @@
 {% block content %}
 
   <div class="company">
-    <p>Company URL: <a href="/booking/{{ slug }}" target="blank">View page</a></p>
+    <p>Company URL: <a class="text-white" href="/booking/{{ slug }}" target="_blank">View page</a></p>
     <p>Current brand image file: {{ previous_brand_image }}</p>
     <p>Company address:</p>
     <p>{{ company_address }}</p>
